--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,9 @@
         </div>
       </div>
     </div>
+    <div>
+      <button onclick="reload();">Reload</button>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
