--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
+    <link rel="stylesheet" href="style.css" type="text/css" />
     <script
       src="https://kit.fontawesome.com/4f85d972ff.js"
       crossorigin="anonymous"
